--- a/week-1/6-css-properties/styles.css
+++ b/week-1/6-css-properties/styles.css
@@ -1,1 +1,22 @@
 /* Add your CSS code below */
+.link {
+    color: red;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.message__time {
+    font-size: 0.9rem;
+}
+
+.message message--unread {
+    border-left: blue;
+}
+
+.message message--old {
+    opacity: 0.5;
+}
+
+.message {
+    line-height: 130%;
+}
