Completed 6-css-properties

--- a/week-1/6-css-properties/styles.css
+++ b/week-1/6-css-properties/styles.css
@@ -9,11 +9,11 @@
     font-size: 0.9rem;
 }
 
-.message message--unread {
+.message--unread {
     border-left: blue;
 }
 
-.message message--old {
+.message--old {
     opacity: 0.5;
 }
 
