--- a/week-1/7-css-box/styles.css
+++ b/week-1/7-css-box/styles.css
@@ -1,6 +1,13 @@
 /* Try different box model properties below */
 .pages__page {
-  border: 1px solid #4491db;
-  border-radius: 4px;
-  background: #fff;
+  border: 5px solid #044583;
+  border-radius: 8px;
+  background: rgb(208, 211, 21);
+}
+
+* { border: 1px solid red; }
+
+.country {
+  padding: 8px;
+  font-weight: bold;
 }
