--- a/week-1/6-css-properties/styles.css
+++ b/week-1/6-css-properties/styles.css
@@ -1,22 +1,22 @@
 /* Add your CSS code below */
 .link {
-    color: red;
-    font-weight: bold;
-    text-decoration: none;
+  color: red;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .message__time {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
 .message--unread {
-    border-left: blue;
+  border-left: 8px solid blue;
 }
 
 .message--old {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 .message {
-    line-height: 130%;
+  line-height: 130%;
 }
